--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using librum
 @using librum.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, GravatarHelper.AspNetCore
+@addTagHelper *, PaulMiami.AspNetCore.Mvc.Recaptcha
+@addTagHelper *, Westwind.AspNetCore.Markdown
