--- a/Views/Shared/_CommentPartial.cshtml
+++ b/Views/Shared/_CommentPartial.cshtml
@@ -1,20 +1,33 @@
+@model CommentSettings
+@{
+    var isInArticle = false;
+    if(Model != null)
+    {
+        if(Model.IsInArticle.HasValue)
+        {
+            isInArticle = Model.IsInArticle.Value;
+        }
+    }
+}
 <section class="bg-light mt-5 py-3">
     <div class="container">
-        <div id="disqus_thread" class="my-4"></div>
-        <script type="text/javascript">
-        var disqus_config = function ()
-        {
-            this.page.url = "@($"{Context.Request.Scheme}://{Context.Request.Host}{Context.Request.Path}{Context.Request.QueryString}")";  // Replace PAGE_URL with your page's canonical URL variable
-            this.page.identifier = "@(Context.Request.Path.GetHashCode())"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-        };
-        (function()
-        {
-            var d = document, s = d.createElement('script');
-            s.src = 'https://clicksguard-io.disqus.com/embed.js';
-            s.setAttribute('data-timestamp', +new Date());
-            (d.head || d.body).appendChild(s);
-        })();
-        </script>
-        <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+        <div class="@(isInArticle ? "col-lg-8 offset-lg-2 col-md-10 offset-md-1":"col-lg-12")">
+            <div id="disqus_thread" class="my-4"></div>
+            <script type="text/javascript">
+            var disqus_config = function ()
+            {
+                this.page.url = "@($"{Context.Request.Scheme}://{Context.Request.Host}{Context.Request.Path}{Context.Request.QueryString}")";  // Replace PAGE_URL with your page's canonical URL variable
+                this.page.identifier = "@(Context.Request.Path.GetHashCode())";
+            };
+            (function()
+            {
+                var d = document, s = d.createElement('script');
+                s.src = 'https://clicksguard-io.disqus.com/embed.js';
+                s.setAttribute('data-timestamp', +new Date());
+                (d.head || d.body).appendChild(s);
+            })();
+            </script>
+            <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+        </div>
     </div>
 </section>
