--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
-﻿@using librum
-@using librum.Models
+﻿@using Librum
+@using Librum.Models
+@using Librum.Settings
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, GravatarHelper.AspNetCore
 @addTagHelper *, PaulMiami.AspNetCore.Mvc.Recaptcha
