--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Librum
 @using Librum.Models
 @using Librum.Settings
+@using Microsoft.Extensions.Configuration
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, GravatarHelper.AspNetCore
 @addTagHelper *, PaulMiami.AspNetCore.Mvc.Recaptcha
