--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -2,6 +2,7 @@
 @using Librum.Models
 @using Librum.Settings
 @using Microsoft.Extensions.Configuration
+@inject IConfiguration Configuration
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, GravatarHelper.AspNetCore
 @addTagHelper *, PaulMiami.AspNetCore.Mvc.Recaptcha
