--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,68 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+@if(Configuration.GetSection("Configuration").GetValue<bool>("DisplayHeader"))
+{
+    <div class="text-center py-5 mt-2">
+        <h1 class="display-5 mt-3">@(Configuration.GetValue<string>("BlogName"))</h1>
+        <p>@(Configuration.GetValue<string>("Description"))</p>
+    </div>
+}
+else
+{
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 pt-5 px-4 mx-2">
+                <h5>Recent Posts:</h5>
+            </div>
+        </div>
+    </div>
+}
+<section id="" class="pb-4">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="card border-0 mb-1">
+                    <div class="card-body">
+                        <h3 class="card-title">Stake your $STRAT on Raspberry PI 3</h3>
+                        <p class="card-text">Staking $STRAT can be difficult if you want to do this locally and you do not want to buy a server or keep your computer always up (costs…</p>
+                        <p class="card-text"><small class="text-muted">Last edited 5 months ago &bull; 1 min read (162 words) so far</small></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="card border-0 mb-1">
+                    <div class="card-body">
+                        <h3 class="card-title">Débuter avec .Net Core (MVC)</h3>
+                        <p class="card-text">Vue d’ensemble de la technologie Microsoft .Net Core</p>
+                        <p class="card-text"><small class="text-muted">Last edited 5 months ago &bull; 1 min read (162 words) so far</small></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="card border-0 mb-1">
+                    <div class="card-body">
+                        <h3 class="card-title">Apprenez à Utiliser PGP</h3>
+                        <p class="card-text">PGP est un logiciel de chiffrement et d’authentification, il supporte plusieurs algorithmes comme RSA, DSA, ou EcDSA, il est utilisé pour…</p>
+                        <p class="card-text"><small class="text-muted">Last edited 5 months ago &bull; 1 min read (162 words) so far</small></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="card border-0 mb-1">
+                    <div class="card-body">
+                        <h3 class="card-title">Deployer un Serveur OpenVPN</h3>
+                        <p class="card-text">Il existe un moyen très simple pour créer son propre serveur VPN en deux commandes Linux, pour cela, nous allons installer OpenVPN AS.</p>
+                        <p class="card-text"><small class="text-muted">Last edited 5 months ago &bull; 1 min read (162 words) so far</small></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
