--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,5 +1,4 @@
-﻿@inject IConfiguration Configuration
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -14,28 +13,29 @@
     <meta name="DC.Keywords" content="@(@ViewData["Keywords"] ?? Configuration.GetValue<string>("Keywords"))">
     <meta name="DC.Copyright" content="">
     <meta name="DC.Author" content="Clint Mourlevat">
+    <link rel="canonical" href="@(Configuration.GetValue<string>("CanonicalUri"))" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/themify-icons/0.1.2/css/themify-icons.css" />
     <environment include="Development">
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-        <link href="~/lib/nprogress/nprogress.css" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="~/lib/font-awesome/css/all.css" />
-        <link rel="stylesheet" type="text/css" href="~/lib/themify-icons" />
-        <link rel="stylesheet" href="~/css/default.css" />
-        <link rel="stylesheet" href="~/css/markdown.css" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+    <link href="~/lib/nprogress/nprogress.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="~/lib/font-awesome/css/all.css" />
+    <link rel="stylesheet" type="text/css" href="~/lib/themify-icons" />
+    <link rel="stylesheet" href="~/css/default.css" />
+    <link rel="stylesheet" href="~/css/markdown.css" />
     </environment>
     <environment exclude="Development">
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-        <link href="~/lib/nprogress/nprogress.min.css" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="~/lib/font-awesome/css/all.min.css" />
-        <link rel="stylesheet" href="~/css/default.min.css" />
-        <link rel="stylesheet" href="~/css/markdown.min.css" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link href="~/lib/nprogress/nprogress.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="~/lib/font-awesome/css/all.min.css" />
+    <link rel="stylesheet" href="~/css/default.min.css" />
+    <link rel="stylesheet" href="~/css/markdown.min.css" />
     </environment>
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white shadow-sm" id="main-bar">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light @(Configuration.GetSection("Configuration").GetValue<bool>("FixedNavbar") ? "fixed-top":"") bg-white shadow-sm" id="main-bar">
             <div class="container">
-                <a class="navbar-brand" asp-controller="Home" asp-action="Index"><i class="fas fa-adjust"></i> Clint.Network's Blog</a>
+                <a class="navbar-brand" asp-controller="Home" asp-action="Index"><i class="@(Configuration.GetValue<string>("Icon"))"></i> @(Configuration.GetValue<string>("BlogName"))</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -63,12 +63,12 @@
             </div>
         </nav>
     </header>
-    <main role="main">
+    <main role="main" class="@(Configuration.GetSection("Configuration").GetValue<bool>("FixedNavbar") ? "pt-5":"")">
         @RenderBody()
     </main>
     <footer class="footer bg-light text-center py-4">
         <div class="container">
-            Copyright &copy; 2019 Librum - Learn more about Clint.Network and his projects 🚀.
+            Copyright &copy; @(DateTime.Now.Year) @(Configuration.GetValue<string>("BlogName")) - @(Configuration.GetValue<string>("Description")) - Powered by <a href="https://github.com/clintnetwork/librum" target="_blank">Librum</a>.
         </div>
     </footer>
     <partial name="_CookieConsentPartial" />
