--- a/Librum/Views/_ViewImports.cshtml
+++ b/Librum/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Librum
 @using Librum.Models
+@using Librum.ViewModels
 @using Librum.Settings
 @using Microsoft.Extensions.Configuration
 @inject IConfiguration Configuration
