--- a/Librum/wwwroot/css/default.css
+++ b/Librum/wwwroot/css/default.css
@@ -1,43 +1,47 @@
-﻿body
-{
+﻿body {
   font-family: -apple-system,
-  BlinkMacSystemFont,
-  'Segoe UI',
-  Roboto,
-  Oxygen-Sans,
-  Ubuntu,
-  Cantarell,
-  'Helvetica Neue',
-  Helvetica,
-  Arial,
-  sans-serif;
+    BlinkMacSystemFont,
+    'Segoe UI',
+    Roboto,
+    Oxygen-Sans,
+    Ubuntu,
+    Cantarell,
+    'Helvetica Neue',
+    Helvetica,
+    Arial,
+    sans-serif;
 }
 
-.shadow-sm
-{
+.shadow-sm {
   box-shadow: 0 4px 12px 0 rgba(0, 0, 0, .05) !important;
 }
 
-#main-bar
-{
+#main-bar {
   padding: 12px 0 !important;
 }
 
-.float-right
-{
+.float-right {
   float: right;
 }
 
-.gravatar
-{
+.inherit {
+  color: inherit;
+  text-decoration: inherit;
+}
+
+.inherit:hover {
+  color: inherit;
+}
+
+.gravatar {
   border-radius: 50%;
   cursor: pointer;
 }
 
 .form-group.required label:after {
-  content:"*";
+  content: "*";
   margin-left: 5px;
-  color:red;
+  color: red;
 }
 
 .btn-primary {
