Add helpers in view import

--- a/Librum/Views/_ViewImports.cshtml
+++ b/Librum/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Librum
 @using Librum.Models
 @using Librum.ViewModels
+@using Librum.Helpers
 @using Librum.Settings
 @using Microsoft.Extensions.Configuration
 @inject IConfiguration Configuration
