--- a/Librum/wwwroot/css/default.css
+++ b/Librum/wwwroot/css/default.css
@@ -16,6 +16,10 @@
   box-shadow: 0 4px 12px 0 rgba(0, 0, 0, .05) !important;
 }
 
+a {
+  color: #003366;
+}
+
 #main-bar {
   padding: 12px 0 !important;
 }
