Fix autosave for new article view

--- a/Librum/Views/Article/New.cshtml
+++ b/Librum/Views/Article/New.cshtml
@@ -50,7 +50,7 @@
             element: $("#markdown-editor")[0],
             autosave: {
                 enabled: true,
-                uniqueId: "MyUniqueID",
+                uniqueId: "LibrumUniqueId",
                 delay: 1000,
                 },
             spellChecker: false,
