--- a/Librum/Views/Home/Index.cshtml
+++ b/Librum/Views/Home/Index.cshtml
@@ -27,10 +27,13 @@ else
                 <div class="col-lg-12">
                     <div class="card border-0 mb-1">
                         <div class="card-body">
-                            <div class="float-right">
-                                <a asp-controller="Article" asp-action="Edit" asp-route-slugArticle="@(article.Slug)" class="btn btn-sm btn-outline-secondary">Edit Article</a>
-                                <a asp-controller="Article" asp-action="Delete" asp-route-slugArticle="@(article.Slug)" class="btn btn-sm btn-outline-danger">Delete Article</a>
-                            </div>
+                            @if(User.Identity.IsAuthenticated)
+                            {
+                                <div class="float-right">
+                                    <a asp-controller="Article" asp-action="Edit" asp-route-slugArticle="@(article.Slug)" class="btn btn-sm btn-outline-secondary">Edit Article</a>
+                                    <a asp-controller="Article" asp-action="Delete" asp-route-slugArticle="@(article.Slug)" onclick="return confirm('Do you really want to delete this article ?');" class="btn btn-sm btn-outline-danger">Delete Article</a>
+                                </div>
+                            }
                             <h3 class="card-title">
                                 <a asp-controller="Article" asp-action="Article" asp-route-slugArticle="@article.Slug" class="inherit">@article.Title</a>
                             </h3>
