--- a/Librum/Views/Home/Index.cshtml
+++ b/Librum/Views/Home/Index.cshtml
@@ -38,7 +38,7 @@ else
                                 <a asp-controller="Article" asp-action="Article" asp-route-slugArticle="@article.Slug" class="inherit">@article.Title</a>
                             </h3>
                             <p class="card-text">@article.Description</p>
-                            <p class="card-text"><small class="text-muted">Last edited @(article.WritedDatetime.TimeAgo()) &bull; About @(article.Content.WordsCount()) words at most</small></p>
+                            <p class="card-text"><small class="text-muted">Last edited @(article.WritedDatetime.TimeAgo()) &bull; @(article.Content.WordsCount()) words at most</small></p>
                         </div>
                     </div>
                 </div>
