--- a/Librum/Views/Shared/_Layout.cshtml
+++ b/Librum/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light @(Configuration.GetSection("Configuration").GetValue<bool>("FixedNavbar") ? "fixed-top":"") bg-white shadow-sm" id="main-bar">
             <div class="container">
                 <a class="navbar-brand" asp-controller="Home" asp-action="Index"><i class="@(Configuration.GetValue<string>("Icon"))"></i> @(Configuration.GetValue<string>("BlogName"))</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse">
