--- a/Librum/Views/Article/Article.cshtml
+++ b/Librum/Views/Article/Article.cshtml
@@ -1,4 +1,5 @@
 @model Article
+@inject IUsers Users
 @{
     ViewData["Title"] = Model.Title;
     ViewData["Description"] = Model.Description;
@@ -7,6 +8,7 @@
     {
         IsInArticle = true
     };
+    var articleOwner = Users.GetUserByEmail(Model.AuthorUsername);
 }
 <section class="pt-5 pb-4">
     <div class="container">
@@ -19,4 +21,5 @@
         </div>
     </div>
 </section>
+<partial name="_AuthorPartial" model="@(articleOwner)" />
 <partial name="_CommentPartial" model="@(commentSettings)" />
