--- a/Librum/Views/_ViewImports.cshtml
+++ b/Librum/Views/_ViewImports.cshtml
@@ -3,6 +3,7 @@
 @using Librum.ViewModels
 @using Librum.Helpers
 @using Librum.Settings
+@using Librum.Interfaces
 @using Microsoft.Extensions.Configuration
 @inject IConfiguration Configuration
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
