--- a/Librum/Views/Home/Index.cshtml
+++ b/Librum/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<Article>
+﻿@using Markdig
+@model List<Article>
 @{
     ViewData["Title"] = "Welcome to " + Configuration.GetValue<string>("BlogName");
 }
@@ -37,7 +38,9 @@ else
                             <h3 class="card-title">
                                 <a asp-controller="Article" asp-action="Article" asp-route-slugArticle="@article.Slug" class="inherit">@article.Title</a>
                             </h3>
-                            <p class="card-text">@article.Description</p>
+                            <p class="card-text">
+                                @Markdown.ToPlainText(article.Description)
+                            </p>
                             <p class="card-text"><small class="text-muted">Last edited @(article.WritedDatetime.TimeAgo()) &bull; @(article.Content.WordsCount()) words at most</small></p>
                         </div>
                     </div>
