--- a/Librum/Views/Article/Edit.cshtml
+++ b/Librum/Views/Article/Edit.cshtml
@@ -14,6 +14,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <form method="post" asp-antiforgery="true">
+                    <input type="hidden" asp-for="Id" />
                     <div class="form-group required">
                         <span class="text-danger small float-right" asp-validation-for="Title"></span>
                         <label>Enter a Nice Title</label>
