--- a/Librum/Views/Article/New.cshtml
+++ b/Librum/Views/Article/New.cshtml
@@ -30,6 +30,9 @@
                         <label>Mots Clés</label>
                         <input type="text" class="form-control" asp-for="Keywords" placeholder="Enter some tags separated by comas" />
                     </div>
+                    <div class="form-group">
+                        <input type="checkbox" asp-for="IsDraft" /> Save as Draft
+                    </div>
                     <div class="text-right mt-4">
                         <button type="reset" class="btn btn-black"><i class="fas fa-ban"></i> Clear Form</button>
                         <button type="submit" name="draft" value="true" class="btn btn-dark"><i class="fas fa-pen"></i> Save as Draft</button>
