Fix new article buttons

--- a/Librum/Views/Article/New.cshtml
+++ b/Librum/Views/Article/New.cshtml
@@ -35,8 +35,7 @@
                     </div>
                     <div class="text-right mt-4">
                         <button type="reset" class="btn btn-black"><i class="fas fa-ban"></i> Clear Form</button>
-                        <button type="submit" name="draft" value="true" class="btn btn-dark"><i class="fas fa-pen"></i> Save as Draft</button>
-                        <button type="submit" class="btn btn-primary"><i class="fas fa-check"></i> Publish Now</button>
+                        <button type="submit" class="btn btn-primary"><i class="fas fa-check"></i> Save Now</button>
                     </div>
                 </form>
             </div>
