--- a/Librum/Views/Shared/_Layout.cshtml
+++ b/Librum/Views/Shared/_Layout.cshtml
@@ -16,19 +16,18 @@
     <link rel="canonical" href="@(Configuration.GetValue<string>("CanonicalUri"))" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/themify-icons/0.1.2/css/themify-icons.css" />
     <environment include="Development">
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-    <link href="~/lib/nprogress/nprogress.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="~/lib/font-awesome/css/all.css" />
-    <link rel="stylesheet" type="text/css" href="~/lib/themify-icons" />
-    <link rel="stylesheet" href="~/css/default.css" />
-    <link rel="stylesheet" href="~/css/markdown.css" />
+        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+        <link href="~/lib/nprogress/nprogress.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="~/lib/font-awesome/css/all.css" />
+        <link rel="stylesheet" href="~/css/default.css" />
+        <link rel="stylesheet" href="~/css/markdown.css" />
     </environment>
     <environment exclude="Development">
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link href="~/lib/nprogress/nprogress.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="~/lib/font-awesome/css/all.min.css" />
-    <link rel="stylesheet" href="~/css/default.min.css" />
-    <link rel="stylesheet" href="~/css/markdown.min.css" />
+        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+        <link href="~/lib/nprogress/nprogress.min.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="~/lib/font-awesome/css/all.min.css" />
+        <link rel="stylesheet" href="~/css/default.min.css" />
+        <link rel="stylesheet" href="~/css/markdown.min.css" />
     </environment>
     @RenderSection("Links", required: false)
 </head>
@@ -53,11 +52,11 @@
                         }
                     </ul>
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item mr-2">
-                            <a class="nav-link text-dark" asp-controller="Home" asp-action="Privacy"><i class="far fa-bookmark"></i></a>
+                        <li class="nav-item mr-1">
+                            <a class="nav-link text-dark" asp-controller="Home" asp-action="Search"><i data-feather="search"></i></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Home" asp-action="Index"><i class="far fa-bell"></i></a>
+                            <a class="nav-link text-dark" asp-controller="Home" asp-action="Bookmarked"><i data-feather="bookmark"></i></a>
                         </li>
                     </ul>
                     <form class="form-inline ml-3">
@@ -95,11 +94,13 @@
     <!-- <partial name="_CookieConsentPartial" /> -->
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
+        <script src="~/lib/feather-icons/dist/feather.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
         <script src="~/js/default.js"></script>
     </environment>
     <environment exclude="Development">
         <script src="~/lib/jquery/dist/jquery.min.js"></script>
+        <script src="~/lib/feather-icons/dist/feather.min.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
         <script src="~/js/default.min.js" asp-append-version="true"></script>
     </environment>
