--- a/Librum/wwwroot/css/default.css
+++ b/Librum/wwwroot/css/default.css
@@ -1,98 +1,88 @@
 ﻿html, body {
-  height: 100%;
+    height: 100%;
 }
 
 body {
-  display: flex;
-  flex-direction: column;
-  font-family: -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    Oxygen-Sans,
-    Ubuntu,
-    Cantarell,
-    'Helvetica Neue',
-    Helvetica,
-    Arial,
-    sans-serif;
+    display: flex;
+    flex-direction: column;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 .shadow-sm {
-  box-shadow: 0 4px 12px 0 rgba(0, 0, 0, .05) !important;
+    box-shadow: 0 4px 12px 0 rgba(0, 0, 0, .05) !important;
 }
 
 a {
-  color: #003366;
+    color: #003366;
 }
 
 #main-bar {
-  padding: 12px 0 !important;
+    padding: 12px 0 !important;
 }
 
 .float-right {
-  float: right;
+    float: right;
 }
 
 .inherit {
-  color: inherit;
-  text-decoration: inherit;
+    color: inherit;
+    text-decoration: inherit;
 }
 
-.inherit:hover {
-  color: inherit;
-}
+    .inherit:hover {
+        color: inherit;
+    }
 
 .gravatar {
-  border-radius: 50%;
-  cursor: pointer;
+    border-radius: 50%;
+    cursor: pointer;
 }
 
 .form-group.required label:after {
-  content: "*";
-  margin-left: 5px;
-  color: red;
+    content: "*";
+    margin-left: 5px;
+    color: red;
 }
 
 .btn-primary {
-  background-color: #33cabb;
-  border-color: #33cabb;
-  color: #fff;
+    background-color: #33cabb;
+    border-color: #33cabb;
+    color: #fff;
 }
 
-.btn-primary:hover {
-  background-color: #52d3c7;
-  border-color: #52d3c7;
-  color: #fff;
-}
+    .btn-primary:hover {
+        background-color: #52d3c7;
+        border-color: #52d3c7;
+        color: #fff;
+    }
 
-.btn-primary:focus,
-.btn-primary.focus {
-  color: #fff;
-}
+    .btn-primary:focus,
+    .btn-primary.focus {
+        color: #fff;
+    }
 
-.btn-primary.disabled,
-.btn-primary:disabled {
-  background-color: #33cabb;
-  border-color: #33cabb;
-  opacity: 0.5;
-}
+    .btn-primary.disabled,
+    .btn-primary:disabled {
+        background-color: #33cabb;
+        border-color: #33cabb;
+        opacity: 0.5;
+    }
 
 main {
-  flex: 1 0 auto;
+    flex: 1 0 auto;
 }
 
 .footer {
-  flex-shrink: 0;
+    flex-shrink: 0;
 }
 
 @media (max-width: 768px) {
-  .navbar-brand {
-    padding-left: 1rem !important;
-  }
-  .navbar-toggler
-  {
-  }
+    .navbar-brand {
+        padding-left: 1rem !important;
+    }
+
+    .navbar-toggler {
+    }
 }
 
 .feather {
@@ -100,3 +90,21 @@ main {
     height: 18px !important;
     margin-bottom: 3px;
 }
+
+.clickable-link {
+    cursor: pointer;
+}
+
+    .clickable-link::before {
+        content: "\f0c1";
+        font-weight: 600;
+        font-family: 'Font Awesome\ 5 Free';
+        position: absolute;
+        left: -30px;
+        opacity: 0;
+        transition: 0.3s all ease;
+    }
+
+    .clickable-link:hover::before {
+        opacity: 1;
+    }
