--- a/Librum/Views/Article/Edit.cshtml
+++ b/Librum/Views/Article/Edit.cshtml
@@ -34,7 +34,7 @@
                         <input type="checkbox" asp-for="IsDraft" /> Save as Draft
                     </div>
                     <div class="text-right mt-4">
-                        <button type="reset" class="btn btn-black"><i class="fas fa-ban"></i> Clear Form</button>
+                        <button type="reset" class="btn btn-black"><i class="fas fa-ban"></i> Reset Form</button>
                         <button type="submit" class="btn btn-primary"><i class="fas fa-check"></i> Save Now</button>
                     </div>
                 </form>
