--- a/Librum/Views/Shared/_Layout.cshtml
+++ b/Librum/Views/Shared/_Layout.cshtml
@@ -17,14 +17,16 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/themify-icons/0.1.2/css/themify-icons.css" />
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-        <link href="~/lib/nprogress/nprogress.css" rel="stylesheet">
+        <link rel="stylesheet" href="~/lib/nprogress/nprogress.css" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="~/lib/font-awesome/css/all.css" />
+        <link rel="stylesheet" type="text/css" href="~/lib/node-snackbar/dist/snackbar.css" />
         <link rel="stylesheet" href="~/css/default.css" />
         <link rel="stylesheet" href="~/css/markdown.css" />
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-        <link href="~/lib/nprogress/nprogress.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="~/lib/nprogress/nprogress.min.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="~/lib/node-snackbar/dist/snackbar.min.css" />
         <link rel="stylesheet" type="text/css" href="~/lib/font-awesome/css/all.min.css" />
         <link rel="stylesheet" href="~/css/default.min.css" />
         <link rel="stylesheet" href="~/css/markdown.min.css" />
@@ -95,12 +97,14 @@
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/feather-icons/dist/feather.js"></script>
+        <script src="~/lib/node-snackbar/dist/snackbar.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
         <script src="~/js/default.js"></script>
     </environment>
     <environment exclude="Development">
         <script src="~/lib/jquery/dist/jquery.min.js"></script>
         <script src="~/lib/feather-icons/dist/feather.min.js"></script>
+        <script src="~/lib/node-snackbar/dist/snackbar.min.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
         <script src="~/js/default.min.js" asp-append-version="true"></script>
     </environment>
