Add disclaimer about renaming article

--- a/Librum/Views/Article/Edit.cshtml
+++ b/Librum/Views/Article/Edit.cshtml
@@ -19,6 +19,7 @@
                         <span class="text-danger small float-right" asp-validation-for="Title"></span>
                         <label>Enter a Nice Title</label>
                         <input type="text" class="form-control" asp-for="Title" placeholder="Enter the title of your article" />
+                        <small class="form-text text-danger">Warning: Rename your article will change his canonical URL.</small>
                     </div>
                     <div class="form-group required">
                         <span class="text-danger small float-right" asp-validation-for="Content"></span>
