--- a/Librum/Views/Home/Search.cshtml
+++ b/Librum/Views/Home/Search.cshtml
@@ -1,36 +1,20 @@
 ﻿@model List<Article>
-@{
-    ViewData["Title"] = "Welcome to " + Configuration.GetValue<string>("BlogName");
-}
-@if(Configuration.GetSection("Configuration").GetValue<bool>("DisplayHeader"))
-{
-    <div class="text-center py-5 mt-2">
-        <h1 class="display-5 mt-3">@(Configuration.GetValue<string>("BlogName"))</h1>
-        <p>@(Configuration.GetValue<string>("Description"))</p>
-    </div>
-}
-else
-{
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 pt-5 px-4 mx-2">
-                <h5>Recent Posts:</h5>
-            </div>
-        </div>
-    </div>
-}
+<div class="text-center py-5 mt-2">
+    <h1 class="display-5 mt-3">Search for '@ViewBag.Terms'</h1>
+    <p>This is the result for your search.</p>
+</div>
 <section id="articles" class="pb-4">
     <div class="container">
-        @foreach(var article in Model)
+        @foreach (var article in Model)
         {
             <div class="row">
                 <div class="col-lg-12">
                     <div class="card border-0 mb-1">
                         <div class="card-body">
-                            @if(User.Identity.IsAuthenticated)
+                            @if (User.Identity.IsAuthenticated)
                             {
                                 <div class="float-right">
-                                    @if(article.IsDraft)
+                                    @if (article.IsDraft)
                                     {
                                         <a asp-controller="Article" asp-action="Publish" asp-route-slugArticle="@(article.Slug)" class="btn btn-sm btn-outline-success"><i class="fas fa-check"></i><span class="d-lg-inline d-none"> Publish</span></a>
                                     }
@@ -50,18 +34,5 @@ else
                 </div>
             </div>
         }
-        <!-- <div class="row">
-            <div class="col-lg-12 text-center pt-4 pb-2">
-                <nav aria-label="Librum Pagination" class="w-10 text-center m-auto d-inline-block">
-                    <ul class="pagination">
-                        <li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
-                        <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                        <li class="page-item"><a class="page-link" href="#">2</a></li>
-                        <li class="page-item"><a class="page-link" href="#">3</a></li>
-                        <li class="page-item"><a class="page-link" href="#">Next</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </div> -->
     </div>
 </section>
