Removing interface for Services

--- a/Librum/Views/_ViewImports.cshtml
+++ b/Librum/Views/_ViewImports.cshtml
@@ -10,3 +10,4 @@
 @addTagHelper *, GravatarHelper.AspNetCore
 @addTagHelper *, PaulMiami.AspNetCore.Mvc.Recaptcha
 @addTagHelper *, Westwind.AspNetCore.Markdown
+@inject Users Users
