--- a/Librum/Views/Shared/_Account.cshtml
+++ b/Librum/Views/Shared/_Account.cshtml
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -6,18 +6,18 @@
     <title>@(Configuration.GetValue<string>("BlogName")) | ds</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/themify-icons/0.1.2/css/themify-icons.css" />
     <environment include="Development">
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-    <link href="~/lib/nprogress/nprogress.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="~/lib/font-awesome/css/all.css" />
-    <link rel="stylesheet" type="text/css" href="~/lib/themify-icons" />
-    <link rel="stylesheet" href="~/css/default.css" />
-    <link rel="stylesheet" href="~/css/markdown.css" />
+        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+        <link href="~/lib/nprogress/nprogress.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="~/lib/font-awesome/css/all.css" />
+        <link rel="stylesheet" type="text/css" href="~/lib/themify-icons" />
+        <link rel="stylesheet" href="~/css/default.css" />
+        <link rel="stylesheet" href="~/css/markdown.css" />
     </environment>
     <environment exclude="Development">
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link href="~/lib/nprogress/nprogress.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="~/lib/font-awesome/css/all.min.css" />
-    <link rel="stylesheet" href="~/css/default.min.css" />
+        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+        <link href="~/lib/nprogress/nprogress.min.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="~/lib/font-awesome/css/all.min.css" />
+        <link rel="stylesheet" href="~/css/default.min.css" />
     </environment>
 </head>
 <body class="bg-light">
